--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: 2012-huhexian
 Theme URI: https://zuofei.net
-Author: HuHexian
+Author: 今是昨非
 Author URI: https://zuofei.net
-Description: Modified from 2012_mtr
+Description: Modified from 2012_mtr 加上你的链接 https://github.com/huhexian/2012-huhexian
 Version: 1.0.2.4
 Tested up to: 6.1
 Requires at least: 3.5
