--- a/style.css
+++ b/style.css
@@ -1092,9 +1092,14 @@ article.sticky .featured-post {
 }
 .entry-content code,
 .comment-content code {
-	font-size: 12px;
-	font-size: 1.2rem;
-	line-height: 2;
+	text-align: left;
+    line-height: 1.75;
+    font-size: 90%;
+    color: #d14;
+    background: rgba(27,31,35,.05);
+    padding: 3px 5px;
+    border-radius: 4px;
+    word-break: break-all;
 }
 .entry-content pre,
 .comment-content pre {
